
	* tests/Makefile.am (LIBS): add $(GLIB_LIBS) so this still works
	when building with weird LDFLAGS. #541506, Götz Waschk.

	* docs/reference/Makefile.am (GTKDOC_LIBS): likewise

	* libsoup/soup-auth-digest.c (soup_auth_digest_parse_algorithm):
	if the server response doesn't include an algorithm, it is
	supposed to default to MD5. #544681, Mads Chr. Olesen.

2008-06-04  Tor Lillqvist  <tml@novell.com>

	* libsoup/soup-socket.c (set_fdflags): The SO_RCVTIMEO and
	SO_SNDTIMEO options to setsockopt() take int values, in
	milliseconds, on Windows. Not struct timeval. Eek. So passing a
	struct timeval meant that the tv_sec value (which is first in the
	struct) is interpreted as milliseconds. setsockopt apparently
	doesn't even get upset by the fact that the option size doesn't
	match the sizeof(int) it should expect.

2008-05-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie.c (soup_cookie_applies_to_uri): fix the path
	checking

2008-04-29  Tor Lillqvist  <tml@novell.com>

	* libsoup/soup-dns.c (soup_dns_is_ip_address): Fix compilation
	error in the !HAVE_IPV6 && !HAVE_INET_PTON && !HAVE_INET_ATON
	case.

2008-04-21  Dan Winship  <danw@gnome.org>

	* configure.in: 2.23.1, bump AGE and CURRENT

	* NEWS: update

2008-04-20  Dan Winship  <danw@gnome.org>

	Fixes for GnuTLS support on Win32. #528752, patch from Marc Maurer

	* libsoup/soup-gnutls.c (soup_ssl_wrap_iochannel): add an argument
	saying whether or not the socket is non-blocking, since there's no
	way to determine this from the fd in WinSock.
	(do_handshake, soup_gnutls_read, soup_gnutls_write): Update for
	that.

	* libsoup/soup-socket.c (soup_socket_start_proxy_ssl): Update for
	that

	* libsoup/soup-nossl.c (soup_ssl_wrap_iochannel): update the
	declaration here too

	* tests/ssl-test.c: Some updates to get this closer to working on
	Windows...

2008-04-14  Chris Lord  <chrislord.net@gmail.com>

	reviewed by: Dan Winship <danw@gnome.org>

	* libsoup/soup-cookie-jar.c (soup_cookie_jar_set_cookie):