@@ -9,6 +9,10 @@
 	if the server response doesn't include an algorithm, it is
 	supposed to default to MD5. #544681, Mads Chr. Olesen.
 
+	* libsoup/soup-message-io.c (SoupMessageIOData): change
+	read_length, write_length, and written to goffset so we can
+	properly handle message bodies > 4G. #539861, Peter Christensen.
+
 2008-06-04  Tor Lillqvist  <tml@novell.com>
 
 	* libsoup/soup-socket.c (set_fdflags): The SO_RCVTIMEO and
